namespaces/default/logcord/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logcord
spec:
  replicas: 0
  selector:
    matchLabels:
      app: logcord
  template:
    metadata:
      labels:
        app: logcord
    spec:
      containers:
        - name: logcord
          image: ghcr.io/python-discord/logcord:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 150m
              memory: 350Mi
          ports:
            - containerPort: 8000
          volumeMounts:
          - mountPath: /tmp
            name: logcord-temp-vol
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
      - name: logcord-temp-vol
        emptyDir: {}
      securityContext:
        fsGroup: 2000
        runAsUser: 1000
        runAsNonRoot: true
